# job_assignment

./: .coverage  INSTRUCTIONS.md  README.md  TODO.md  main.py  pyproject.toml
src/: execute.py  main.py  parser.py  schemas.py
tests/: test_execute.py  test_parser.py  test_parser_full.py  test_parser_methods.py
