[tool.poetry]
name = "job assignment"
version = "0.1.0"
description = ""
authors = ["Jeremy <ferrer.jeremy3@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
pytest-cov = "^6.1.1"
pytest = "^8.3.5"
ruff = "^0.11.8"

[tool.ruff]
exclude = []
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
